fixed 0 day countday situation added workspace and launch config

--- a/Test/index.html
+++ b/Test/index.html
@@ -22,9 +22,9 @@
               <p class="desc">MINUTES</p>
               <p class="numbers minutes">00</p><br>
             </div>
-            <div class="cd-box">
+            <div id="dvSeconds" class="cd-box">
               <p class="desc">SECONDS</p>
-              <p class="numbers seconds">00</p><br>
+              <p id="seconds" class="numbers seconds">00</p><br>
             </div>
           </div>
         </div>
