updated what to hide when days = 0

--- a/Test/index.html
+++ b/Test/index.html
@@ -11,7 +11,7 @@
           <div id="countdown-title"></div>
           <div id="countdown">
             <div class="cd-box">
-              <p class="desc">DAYS</p>
+              <p id="txtdays" class="desc">DAYS</p>
               <p class="numbers days">00</p><br>
             </div>
             <div class="cd-box">
@@ -22,9 +22,9 @@
               <p class="desc">MINUTES</p>
               <p class="numbers minutes">00</p><br>
             </div>
-            <div id="dvSeconds" class="cd-box">
+            <div class="cd-box">
               <p class="desc">SECONDS</p>
-              <p id="seconds" class="numbers seconds">00</p><br>
+              <p class="numbers seconds">00</p><br>
             </div>
           </div>
         </div>
