--- a/Vertical/index.html
+++ b/Vertical/index.html
@@ -11,7 +11,7 @@
               <div id="countdown-title"></div>
               <div id="countdown">
                 <div class="cd-box">
-                  <p class="desc">DAYS</p>
+                  <p id="txtdays" class="desc">DAYS</p>
                   <p class="numbers days">00</p><br>
                 </div>
                 <div class="cd-box">
