hiding whole day div instead of just text

--- a/Vertical/index.html
+++ b/Vertical/index.html
@@ -10,7 +10,7 @@
             <div class="cd-wrapper">
               <div id="countdown-title"></div>
               <div id="countdown">
-                <div class="cd-box">
+                <div id="dvdays" class="cd-box">
                   <p id="txtdays" class="desc">DAYS</p>
                   <p class="numbers days">00</p><br>
                 </div>
