--- a/CurrentWeek/Horizontal/index.html
+++ b/CurrentWeek/Horizontal/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
       <link rel="stylesheet" type="text/css" href="./style/style.css">
-      <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+      <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
       <script type="text/javascript" src="./script/script.js"></script>
   </head>
   <body>
