--- a/CurrentWeek/Horizontal/index.html
+++ b/CurrentWeek/Horizontal/index.html
@@ -1,34 +1,42 @@
 <html>
-  <head>
-      <link rel="stylesheet" type="text/css" href="./style/style.css">
-      <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-      <script type="text/javascript" src="./script/script.js"></script>
-  </head>
-  <body>
-    <center>
-      <div class="cd-section">
-        <div class="cd-wrapper">
-          <div id="countdown-title"></div>
-          <div id="countdown">
-            <div id="dvdays" class="cd-box">
-              <p id="txtdays" class="desc">DAYS</p>
-              <p class="numbers days">00</p><br>
+    <head>
+        <link rel="stylesheet" type="text/css" href="./style/style.css" />
+        <script
+            src="https://code.jquery.com/jquery-3.7.1.min.js"
+            integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+            crossorigin="anonymous"
+        ></script>
+        <script type="text/javascript" src="./script/script.js"></script>
+    </head>
+    <body>
+        <center>
+            <div class="cd-section">
+                <div class="cd-wrapper">
+                    <div id="countdown-title"></div>
+                    <div id="countdown">
+                        <div id="dvdays" class="cd-box">
+                            <p id="txtdays" class="desc">DAYS</p>
+                            <p class="numbers days">00</p>
+                            <br />
+                        </div>
+                        <div class="cd-box">
+                            <p class="desc">HOURS</p>
+                            <p class="numbers hours">00</p>
+                            <br />
+                        </div>
+                        <div class="cd-box">
+                            <p class="desc">MINUTES</p>
+                            <p class="numbers minutes">00</p>
+                            <br />
+                        </div>
+                        <div class="cd-box">
+                            <p class="desc">SECONDS</p>
+                            <p class="numbers seconds">00</p>
+                            <br />
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="cd-box">
-              <p class="desc">HOURS</p>
-              <p class="numbers hours">00</p><br>
-            </div>
-            <div class="cd-box">
-              <p class="desc">MINUTES</p>
-              <p class="numbers minutes">00</p><br>
-            </div>
-            <div class="cd-box">
-              <p class="desc">SECONDS</p>
-              <p class="numbers seconds">00</p><br>
-            </div>
-          </div>
-        </div>
-      </div>
-    </center>
-  </body>
+        </center>
+    </body>
 </html>
