--- a/Responsive/index.html
+++ b/Responsive/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="countdown-container">
+        <h1 id="event-name"></h1>
         <div id="countdown">
             <div><span id="days"></span>Days</div>
             <div><span id="hours"></span>Hours</div>
