--- a/Responsive/index.html
+++ b/Responsive/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <div class="countdown-container">
-        <h1 id="event-name"></h1>
+        <div id="event-name-container">
+            <img id="team1-logo" src="" alt="Team 1 Logo">
+            <h1 id="event-name"></h1>
+            <img id="team2-logo" src="" alt="Team 2 Logo">
+        </div>
         <div id="countdown">
             <div><span id="days"></span>Days</div>
             <div><span id="hours"></span>Hours</div>
