Updating weather, split into two pages

--- a/Weather/index.html
+++ b/Weather/index.html
@@ -50,9 +50,7 @@
     </div>
   </div>
 
-
-
-  <!--Forecast-->
+  <!--Forecast
   <div id="forecast">
     <div class="weather-block">
       <div class="forecast-title">3-Day Forecast</div>
@@ -91,7 +89,7 @@
       </div>
     </div>
   </div>
-
+  -->
 </div>
 
 <script src="script.js"></script>
