--- a/WeatherAPI/test.html
+++ b/WeatherAPI/test.html
@@ -8,24 +8,25 @@
 <body>
     <h1>Current Weather Data</h1>
     <div id="weather">
-        <p>Current Wind Speed: <span id="current-wind"></span> km/h</p>
-        <p>Max Wind Speed: <span id="max-wind"></span> km/h</p>
-        <p>Precipitation: <span id="precipitation"></span> mm</p>
+        <p>Current Wind Speed: <span id="current-wind"></span> mph <span id="current-wind-direction"></span></p>
+        <p>Max Wind Speed: <span id="max-wind"></span> mph</p>
+        <p>Precipitation: <span id="precipitation"></span> in</p>
         <p>Precipitation Chance: <span id="precipitation-chance"></span>%</p>
     </div>
 
     <script>
         async function fetchWeather() {
             const apiKey = 'dd592801e36540649bb213133251604';
-            const location = '60045';
+            const location = '42.2571,-87.8941';
             const url = `https://api.weatherapi.com/v1/current.json?key=${apiKey}&q=${location}`;
 
             try {
                 const response = await fetch(url);
                 const data = await response.json();
-                document.getElementById('current-wind').textContent = data.current.wind_kph;
-                document.getElementById('max-wind').textContent = data.current.gust_kph;
-                document.getElementById('precipitation').textContent = data.current.precip_mm;
+                document.getElementById('current-wind').textContent = data.current.wind_mph;
+                document.getElementById('current-wind-direction').textContent = data.current.wind_dir;
+                document.getElementById('max-wind').textContent = data.current.gust_mph;
+                document.getElementById('precipitation').textContent = data.current.precip_in;
                 document.getElementById('precipitation-chance').textContent = data.current.precip_chance;
             } catch (error) {
                 console.error('Error fetching weather data:', error);
