--- a/ResponsiveDraft/index.html
+++ b/ResponsiveDraft/index.html
@@ -13,10 +13,10 @@
             <h1 id="event-name">NFL Draft</h1>
         </div>
         <div id="countdown">
-            <div><span id="days"></span>Days</div>
-            <div><span id="hours"></span>Hours</div>
-            <div><span id="minutes"></span>Minutes</div>
-            <div><span id="seconds"></span>Seconds</div>
+            <div><span class="countdown-value" id="days"></span><span class="countdown-text"> Days</span></div>
+            <div><span class="countdown-value" id="hours"></span><span class="countdown-text"> Hours</span></div>
+            <div><span class="countdown-value" id="minutes"></span><span class="countdown-text"> Minutes</span></div>
+            <div><span class="countdown-value" id="seconds"></span><span class="countdown-text"> Seconds</span></div>
         </div>
     </div>
     <script src="script.js"></script>
