adjusting spacing and labels

--- a/WeatherAPI/weather-wind.html
+++ b/WeatherAPI/weather-wind.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div id="weather-wind">
-        <p>Current Wind Speed: <span id="current-wind"></span> mph <span id="current-wind-direction"></span> <i id="weather-icon-wind" class="wi wi-wind"></i></p>
-        <p>Max Wind Speed: <span id="max-wind"></span> mph</p>
+        <p>Current: <span id="current-wind"></span> mph <span id="current-wind-direction"></span> <i id="weather-icon-wind" class="wi wi-wind"></i></p>
+        <p>Max: <span id="max-wind"></span> mph</p>
     </div>    
     <script src="script-wind.js"></script>
 </body>
