--- a/WeatherAPI/weather-precipitation.html
+++ b/WeatherAPI/weather-precipitation.html
@@ -9,8 +9,7 @@
 </head>
 <body>
     <div id="weather-precipitation">
-        <i id="weather-icon" class="wi"></i>
-        <p>Precipitation: <span id="precipitation">0</span> in</p>
+        <p>Precipitation: <span id="precipitation">0</span> in <i id="weather-icon" class="wi"></i></p>
         <p>Precipitation Chance: <span id="precipitation-chance">0</span>%</p>
     </div>
     <script src="script-precipitation.js"></script>
