--- a/WeatherAPI/weather-precipitation-1080.html
+++ b/WeatherAPI/weather-precipitation-1080.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="size4K" id="weather-precipitation">
+    <div class="size1080" id="weather-precipitation">
         <p>Precipitation: <span id="precipitation">0</span> in <i id="weather-icon" class="wi"></i></p>
         <p>Precipitation Chance: <span id="precipitation-chance">0</span>%</p>
     </div>
