--- a/WeatherAPI/weather-wind-1080.html
+++ b/WeatherAPI/weather-wind-1080.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="weather-icons-wind.min.css">
 </head>
 <body>
-    <div class="size4K" id="weather-wind">
+    <div class="size1080" id="weather-wind">
         <p>Current: <span id="current-wind"></span> mph <span id="current-wind-direction"></span> <i id="weather-icon-wind" class="wi wi-wind"></i></p>
         <p>Max: <span id="max-wind"></span> mph</p>
     </div>    
