--- a/WeatherAPI/weather-precipitation-1080.html
+++ b/WeatherAPI/weather-precipitation-1080.html
@@ -11,6 +11,7 @@
     <div class="size1080" id="weather-precipitation">
         <p>Precipitation: <span id="precipitation">0</span> in <i id="weather-icon" class="wi"></i></p>
         <p>Precipitation Chance: <span id="precipitation-chance">0</span>%</p>
+        <p id="no-precipitation">No precipitation today.</p>
     </div>
     <script src="script-precipitation.js"></script>
 </body>
