--- a/WeatherAPI/weather-precipitation-1080.html
+++ b/WeatherAPI/weather-precipitation-1080.html
@@ -9,9 +9,8 @@
 </head>
 <body>
     <div class="size1080" id="weather-precipitation">
-        <p>Precipitation: <span id="precipitation">0</span> in <i id="weather-icon" class="wi"></i></p>
-        <p>Precipitation Chance: <span id="precipitation-chance">0</span>%</p>
-        <p id="no-precipitation">No precipitation today.</p>
+        <p>Precip: <span id="precipitation">0</span> in <i id="weather-icon" class="wi"></i></p>
+        <p>Precip Chance: <span id="precipitation-chance">0</span>%</p>
     </div>
     <script src="script-precipitation.js"></script>
 </body>
