--- a/ResponsiveDraft/index.html
+++ b/ResponsiveDraft/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="countdown-container">
+    <div class="countdown-container" id="countdown-container">
         <div id="event-name-container">
             <img id="event-logo" src="../assets/nfl_draft_logo_2025.png" alt="NFL Draft Logo">
         </div>
