--- a/Responsive/index.html
+++ b/Responsive/index.html
@@ -1,25 +1,37 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bears Countdown</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div class="countdown-container">
-        <div id="event-name-container">
-            <img id="team1-logo" src="" alt="Team 1 Logo">
-            <h1 id="event-name"></h1>
-            <img id="team2-logo" src="" alt="Team 2 Logo">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Bears Countdown</title>
+        <link rel="stylesheet" href="styles.css" />
+    </head>
+    <body>
+        <div class="countdown-container">
+            <div id="event-name-container">
+                <img id="team1-logo" src="" alt="Team 1 Logo" />
+                <h1 id="event-name"></h1>
+                <img id="team2-logo" src="" alt="Team 2 Logo" />
+            </div>
+            <div id="countdown">
+                <div>
+                    <span class="countdown-value" id="days"></span
+                    ><span class="countdown-text"> Days</span>
+                </div>
+                <div>
+                    <span class="countdown-value" id="hours"></span
+                    ><span class="countdown-text"> Hours</span>
+                </div>
+                <div>
+                    <span class="countdown-value" id="minutes"></span
+                    ><span class="countdown-text"> Minutes</span>
+                </div>
+                <div>
+                    <span class="countdown-value" id="seconds"></span
+                    ><span class="countdown-text"> Seconds</span>
+                </div>
+            </div>
         </div>
-        <div id="countdown">
-            <div><span id="days"></span>Days</div>
-            <div><span id="hours"></span>Hours</div>
-            <div><span id="minutes"></span>Minutes</div>
-            <div><span id="seconds"></span>Seconds</div>
-        </div>
-    </div>
-    <script src="script.js"></script>
-</body>
+        <script src="script.js"></script>
+    </body>
 </html>
