--- a/Responsive/index.html
+++ b/Responsive/index.html
@@ -1,37 +1,36 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Bears Countdown</title>
-        <link rel="stylesheet" href="styles.css" />
-    </head>
-    <body>
-        <div class="countdown-container">
-            <div id="event-name-container">
-                <img id="team1-logo" src="" alt="Team 1 Logo" />
-                <h1 id="event-name"></h1>
-                <img id="team2-logo" src="" alt="Team 2 Logo" />
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bears Game Day Countdown</title>
+    <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+    <div class="countdown-container">
+        <div id="event-name-container">
+            <img id="team1-logo" src="" alt="Team 1 Logo" />
+            <h1 id="event-name"></h1>
+            <img id="team2-logo" src="" alt="Team 2 Logo" />
+        </div>
+        <div id="countdown">
+            <div>
+                <span class="countdown-value" id="days"></span><span class="countdown-text"> Days</span>
             </div>
-            <div id="countdown">
-                <div>
-                    <span class="countdown-value" id="days"></span
-                    ><span class="countdown-text"> Days</span>
-                </div>
-                <div>
-                    <span class="countdown-value" id="hours"></span
-                    ><span class="countdown-text"> Hours</span>
-                </div>
-                <div>
-                    <span class="countdown-value" id="minutes"></span
-                    ><span class="countdown-text"> Minutes</span>
-                </div>
-                <div>
-                    <span class="countdown-value" id="seconds"></span
-                    ><span class="countdown-text"> Seconds</span>
-                </div>
+            <div>
+                <span class="countdown-value" id="hours"></span><span class="countdown-text"> Hours</span>
+            </div>
+            <div>
+                <span class="countdown-value" id="minutes"></span><span class="countdown-text"> Minutes</span>
+            </div>
+            <div>
+                <span class="countdown-value" id="seconds"></span><span class="countdown-text"> Seconds</span>
             </div>
         </div>
-        <script src="script.js"></script>
-    </body>
+    </div>
+    <script src="script.js"></script>
+</body>
+
 </html>
