--- a/ResponsiveDraft/index.html
+++ b/ResponsiveDraft/index.html
@@ -7,16 +7,21 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="countdown-container" id="countdown-container">
-        <div id="event-name-container">
-            <img id="event-logo" src="../assets/nfl_draft_logo_2025.png" alt="NFL Draft Logo">
+    <div class="main-container">
+        <div class="countdown-container" id="countdown-container">
+            <div id="event-name-container">
+                <img id="event-logo" src="../assets/nfl_draft_logo_2025.png" alt="NFL Draft Logo">
+            </div>
+            <div id="countdown">
+                <div><span class="countdown-value" id="days"></span><span class="countdown-text"> Days</span></div>
+                <div><span class="countdown-value" id="hours"></span><span class="countdown-text"> Hours</span></div>
+                <div><span class="countdown-value" id="minutes"></span><span class="countdown-text"> Minutes</span></div>
+                <div><span class="countdown-value" id="seconds"></span><span class="countdown-text"> Seconds</span></div>
+            </div>
         </div>
-        <div id="countdown">
-            <div><span class="countdown-value" id="days"></span><span class="countdown-text"> Days</span></div>
-            <div><span class="countdown-value" id="hours"></span><span class="countdown-text"> Hours</span></div>
-            <div><span class="countdown-value" id="minutes"></span><span class="countdown-text"> Minutes</span></div>
-            <div><span class="countdown-value" id="seconds"></span><span class="countdown-text"> Seconds</span></div>
-        </div>
+        <div class="logo-container" id="logo-container">
+            <img src="../assets/logos/BEARS.png" alt="Bears Logo">
+        </div>  
     </div>
     <script src="script.js"></script>
 </body>
