aligning html pages

--- a/WeatherAPI/weather-precipitation-pw.html
+++ b/WeatherAPI/weather-precipitation-pw.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="size4K" id="weather-precipitation">
-        <p>Precipitation: <span id="precipitation">0</span> in <i id="weather-icon" class="wi"></i></p>
-        <p>Precipitation Chance: <span id="precipitation-chance">0</span>%</p>
+        <p>Precip: <span id="precipitation">0</span> in <img id="weather-icon" class="wi" alt="weather icon"></img></p>
+        <p>Precip Chance: <span id="precipitation-chance">0</span>%</p>
         <p id="no-precipitation">No precipitation today.</p>
     </div>
     <script src="script-precipitation-pw.js"></script>
