--- a/WeatherAPI/weather.html
+++ b/WeatherAPI/weather.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Information</title>
-    <link rel="stylesheet" href="weather-icons.min.css">
     <link rel="stylesheet" href="weather-icons-wind.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -18,11 +17,11 @@
             <p>Max: <span id="max-wind"></span> mph</p>
         </div>
         <div class="size1080" id="weather-precipitation">
-            <p>Precip: <span id="precipitation">0</span> in <i id="weather-icon" class="wi"></i></p>
+            <p>Precip: <span id="precipitation">0</span> in <img id="weather-icon" class="wi" alt="weather icon"></img></p>
             <p>Precip Chance: <span id="precipitation-chance">0</span>%</p>
         </div>
     </div>
-    <script src="script-wind.js"></script>
-    <script src="script-precipitation.js"></script>
+    <script src="script-wind-pw.js"></script>
+    <script src="script-precipitation-pw.js"></script>
 </body>
 </html>
