set default weather icon so it doesn't show missing image icon on load

--- a/WeatherAPI/weather.html
+++ b/WeatherAPI/weather.html
@@ -17,7 +17,7 @@
             <p>Max: <span id="max-wind"></span> mph</p>
         </div>
         <div class="size1080" id="weather-precipitation">
-            <p>Precip: <span id="precipitation">0</span> in <img id="weather-icon" class="wi" alt="weather icon"></img></p>
+            <p>Precip: <span id="precipitation">0</span> in <img src="https://widget.perryweather.com/icons/weather/dark/9002.svg" id="weather-icon" class="wi" alt="weather icon"></img></p>
             <p>Precip Chance: <span id="precipitation-chance">0</span>%</p>
         </div>
     </div>
