--- a/WeatherAPI/weather-wind-1080.html
+++ b/WeatherAPI/weather-wind-1080.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wind Speed</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Temperature and Wind Speed</title>
+    <link rel="stylesheet" href="style vertical.css">
     <link rel="stylesheet" href="weather-icons-wind.min.css">
 </head>
-
 <body>
     <div class="container">
-        <div class="windDirection">
-            <i id="weather-icon-wind" class="wi wi-wind windicon"></i>
+        <!-- Temperature and Icon -->
+        <div class="size1080" id="weather-temperature">
+            <img src="" id="temperature-icon" class="wi" alt="temperature icon"></img>
+            <span id="temperature">--°F</span>
         </div>
-        <div class="size1080" id="weather-wind">
-            <p>Wind: <span id="current-wind"></span> mph <span id="current-wind-direction"></span></p>
-            <p>Max: <span id="max-wind"></span> mph</p>
+
+        <!-- Inline Wind Direction Icon and Weather Wind Information -->
+        <div class="wind-container">
+            <div class="windDirection">
+                <i id="weather-icon-wind" class="wi wi-wind windicon"></i>
+            </div>
+            <div class="size1080" id="weather-wind">
+                <p>Wind: <span id="current-wind"></span> mph <span id="current-wind-direction"></span></p>
+                <p>Max: <span id="max-wind"></span> mph</p>
+            </div>
         </div>
     </div>
     <script src="script-wind-pw.js"></script>
 </body>
-
 </html>
