Updated days/hours/min/seconds to all caps

--- a/Countdown16by9/index.html
+++ b/Countdown16by9/index.html
@@ -21,13 +21,13 @@
             <span class="countdown-value" id="seconds"></span>
 
             <!-- Row 2: labels (empty cells below colons) -->
-            <span class="countdown-text">Days</span>
+            <span class="countdown-text">DAYS</span>
             <span aria-hidden="true"></span>
-            <span class="countdown-text">Hours</span>
+            <span class="countdown-text">HOURS</span>
             <span aria-hidden="true"></span>
-            <span class="countdown-text">Minutes</span>
+            <span class="countdown-text">MINUTES</span>
             <span aria-hidden="true"></span>
-            <span class="countdown-text">Seconds</span>
+            <span class="countdown-text">SECONDS</span>
         </div>
     </div>
     <script src="script.js"></script>
