--- a/Countdown/index.html
+++ b/Countdown/index.html
@@ -28,12 +28,13 @@
             min-height: 100vh;
             font-family: Arial, Helvetica, sans-serif;
             color: #fff;
+            background-color: transparent;
         }
 
         .countdown-container {
             text-align: center;
-            width: 90%;
-            max-width: 800px;
+            width: 100%;
+            max-width: 1080px;
             padding: 20px;
         }
 
@@ -54,7 +55,7 @@
         }
 
         .time-value {
-            font-size: clamp(48px, 15vw, 120px);
+            font-size: clamp(48px, 15vw, 160px);
             font-weight: bold;
             line-height: 1;
             color: #fff;
@@ -71,7 +72,7 @@
         }
 
         .colon {
-            font-size: clamp(48px, 15vw, 120px);
+            font-size: clamp(48px, 15vw, 160px);
             font-weight: bold;
             line-height: 1;
             color: #fff;
