--- a/Countdown/index.html
+++ b/Countdown/index.html
@@ -31,6 +31,10 @@
             background-color: transparent;
         }
 
+        html {
+            background-color: transparent;
+        }
+
         .countdown-container {
             text-align: center;
             width: 100%;
