--- a/Countdown/index.html
+++ b/Countdown/index.html
@@ -24,7 +24,6 @@
         body {
             display: flex;
             justify-content: center;
-            align-items: center;
             min-height: 100vh;
             background-color: #071327;
             font-family: Arial, Helvetica, sans-serif;
@@ -33,18 +32,16 @@
 
         .countdown-container {
             text-align: center;
-            width: 90%;
-            max-width: 800px;
-            padding: 20px;
+            width: 100%;
+            max-width: 1080px;
         }
 
         .countdown-grid {
             display: flex;
-            justify-content: center;
             align-items: center;
             flex-wrap: wrap;
             gap: 10px;
-            margin: 20px 0;
+            margin: 20px 20px;
         }
 
         .time-block {
@@ -55,7 +52,7 @@
         }
 
         .time-value {
-            font-size: clamp(48px, 15vw, 120px);
+            font-size: clamp(48px, 15vw, 160px);
             font-weight: bold;
             line-height: 1;
             color: #fff;
@@ -72,7 +69,7 @@
         }
 
         .colon {
-            font-size: clamp(48px, 15vw, 120px);
+            font-size: clamp(48px, 15vw, 160px);
             font-weight: bold;
             line-height: 1;
             color: #fff;
