--- a/Countdown/index.html
+++ b/Countdown/index.html
@@ -25,23 +25,28 @@
             display: flex;
             justify-content: center;
             min-height: 100vh;
-            background-color: #071327;
             font-family: Arial, Helvetica, sans-serif;
             color: #fff;
+        }
+
+        html {
+            background-color: transparent;
         }
 
         .countdown-container {
             text-align: center;
             width: 100%;
             max-width: 1080px;
+            background-color: #071327;
         }
 
         .countdown-grid {
             display: flex;
             align-items: center;
+            justify-content: center;
             flex-wrap: wrap;
             gap: 10px;
-            margin: 20px 20px;
+            margin: 20px;
         }
 
         .time-block {
@@ -52,7 +57,7 @@
         }
 
         .time-value {
-            font-size: clamp(48px, 15vw, 160px);
+            font-size: clamp(48px, 15vw, 180px);
             font-weight: bold;
             line-height: 1;
             color: #fff;
@@ -69,7 +74,7 @@
         }
 
         .colon {
-            font-size: clamp(48px, 15vw, 160px);
+            font-size: clamp(48px, 15vw, 180px);
             font-weight: bold;
             line-height: 1;
             color: #fff;
