--- a/Countdown/index.html
+++ b/Countdown/index.html
@@ -37,7 +37,7 @@
             text-align: center;
             width: 100%;
             max-width: 1080px;
-            background-color: #071327;
+            background-color: transparent;
         }
 
         .countdown-grid {
