adding color back

--- a/Countdown/index.html
+++ b/Countdown/index.html
@@ -30,7 +30,7 @@
         }
 
         html {
-            background-color: transparent;
+            background-color: #071327;
         }
 
         .countdown-container {
@@ -57,7 +57,7 @@
         }
 
         .time-value {
-            font-size: clamp(48px, 15vw, 180px);
+            font-size: clamp(48px, 15vw, 220px);
             font-weight: bold;
             line-height: 1;
             color: #fff;
@@ -74,7 +74,7 @@
         }
 
         .colon {
-            font-size: clamp(48px, 15vw, 180px);
+            font-size: clamp(48px, 15vw, 220px);
             font-weight: bold;
             line-height: 1;
             color: #fff;
@@ -85,7 +85,7 @@
         }
 
         /* Responsive adjustments */
-        @media (max-width: 900px) {
+        @media (max-width: 600px) {
             .countdown-grid {
                 gap: 5px;
             }
